--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,29 +7,37 @@
                 <li class="rk-menu__item"><a routerLink="about" class="rk-menu__link">Acerca de Nosotros</a>
                 </li>
             </ul>
-            <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ anio }} TEN GOLDEN </span>All Right Reserved.</p>
+            <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ anio }} {{infoServicioF.info.titulo }} </span>All Right Reserved.</p>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center">
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blank" [href]="infoServicioF.info.facebook" class="rk-social-btn ">
                 <svg>
             <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
           </svg></a>
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blank" [href]="infoServicioF.info.twitter" class="rk-social-btn ">
                 <svg>
             <use xlink:href="assets/img/symbols.svg#icon-twitter"></use>
           </svg></a>
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blank" [href]="infoServicioF.info.instagram" class="rk-social-btn ">
                 <svg>
-            <use xlink:href="assets/img/symbols.svg#icon-pinterest"></use>
+            <use xlink:href="assets/img/symbols.svg#icon-instagram"></use>
           </svg></a>
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blank" [href]="infoServicioF.info.tumblr" class="rk-social-btn ">
                 <svg>
             <use xlink:href="assets/img/symbols.svg#icon-tumblr"></use>
           </svg></a>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
-            <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">tengolden10@gmail.com </a></span></p>
-            <p class="rk-footer__text rk-footer__by">Theme by <a href="http://pixeden.com" class="ae-u-bolder">Pixeden.</a></p>
+            <p class="rk-footer__text rk-footer__contact ">
+                <span class="ae-u-bold">Email: </span>
+                <span class="ae-u-bolder">
+                    <a target="_blank" href="mailTo: {{ infoServicioF.info.email }}" class="rk-dark-color "> {{ infoServicioF.info.email }} </a>
+                </span>
+            </p>
+            <p class="rk-footer__text rk-footer__by">Theme by
+                <a target="_blank" [href]="infoServicioF.info.pagina" class="ae-u-bolder">Ten Golden.
+                </a>
+            </p>
         </div>
     </div>
 </footer>
