--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,17 @@
+/*
+  Color del Loading. SVG Animation
+*/
+
+svg path,
+svg rect {
+    fill: black;
+}
+
+
+/*
+  Animaciones
+*/
+
 .animated {
     -webkit-animation-duration: 0.75s;
     animation-duration: 0.75s;
