Pantalla de productos y busqueda

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,23 +12,28 @@
     </svg>
   </label>
     <div class="ae-container-fluid rk-topbar">
-        <h1 class="rk-logo"><a routerLink=""> {{ infoServicioH.info.titulo }} <sup>tg</sup></a></h1>
+        <h1 class="rk-logo">
+            <a routerLink=""> {{ infoServicioH.info.titulo }} <sup>tg</sup></a>
+        </h1>
         <nav class="rk-navigation">
             <ul class="rk-menu">
-                <li routerLinkActive="active" class="rk-menu__item"><a routerLink="home" class="rk-menu__link">Inicio</a>
+                <li routerLinkActive="active" class="rk-menu__item">
+                    <a routerLink="home" class="rk-menu__link">Inicio</a>
                 </li>
-                <li routerLinkActive="active" class="rk-menu__item"><a routerLink="about" class="rk-menu__link">Acerca de Nosotros</a>
+                <li routerLinkActive="active" class="rk-menu__item">
+                    <a routerLink="about" class="rk-menu__link">Acerca de
+            Nosotros</a>
                 </li>
 
             </ul>
-            <form class="rk-search">
-                <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+            <div class="rk-search">
+                <input type="text" (keyup)="buscarProducto(txtbuscar.value)" placeholder="Buscar..." id="urku-search" class="rk-search-field" #txtbuscar>
                 <label for="urku-search">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-search"></use>
           </svg>
         </label>
-            </form>
+            </div>
         </nav>
     </div>
 </header>
